--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 	testImplementation "org.assertj:assertj-core:3.11.1"
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
+	implementation 'org.slf4j:slf4j-api:2.0.6'
+	implementation 'org.slf4j:slf4j-simple:2.0.6'
 }
 
 application {
